# zephyr-os-example-LoRaWAN

./: .gitignore  CMakeLists.txt  README.rst  lua_parser.txt
.zephyr-cache/ToolchainCapabilityDatabase/: log.txt
boards/: nucleo_wl55jc.overlay
confs/: prj_nucleo_wl55jc.conf
drivers/: humidity_sensor.h
src/: main.c
src/drivers/: gps_sensor.c  gps_sensor.h  gps_thread.c  humidity_sensor.c  i2c_helpers.h  leds.c  leds.h  light_sensor.c  light_sensor.h  rgb_sensor.c  rgb_sensor.h  soil_sensor.c  soil_sensor.h
